# imgui-sfml-shared

./: CMakeLists.txt
cmake/: sfml-imgui-config.cmake.in
sfml-imgui/: imconfig-SFML.hpp  imgui-SFML.cpp  imgui-SFML.hpp
